[project]
name = "memory-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.64.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "memobase>=0.0.24",
    "memu-py>=0.1.8",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
]
